<resources>
    <string name="app_name">AMSYS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="singin">Ingresar</string>
    <string name="title_pass">Contraseña:</string>
    <string name="title_usuario">Usuario:</string>
    <string name="img">description</string>
    <string name="version">DATA ACQUISITION\n INTERFACE</string>
    <string name="main">Principal</string>
    <string name="login">Iniciando Sesión</string>
    <string name="trabajo">Solicitud de Trabajo</string>
    <string name="falla">Aviso de Falla</string>
    <string name="parada">Registro de Parada</string>


    <string name="title_area">Área:</string>
    <string name="title_sistema">Sistema:</string>
    <string name="title_parte_repuesto">Parte / Repuesto:</string>
    <string name="title_ubicacion_tecnica">Ubicación Técnica:</string>
    <string name="title_emplazamiento">Emplazamiento:</string>
    <string name="title_equipo_superior">Equipo Superior:</string>
    <string name="title_componente">Componente:</string>
    <string name="title_equipo">Equipo:</string>
    <string name="title_tipo_aviso">Tipo de Aviso:</string>
    <string name="title_consecuencias_relativas">Consecuencias relativas a:</string>
    <string name="title_descripcion_breve">Descripción Breve:</string>
    <string name="title_prioridad">Prioridad:</string>
    <string name="title_estado">Estado:</string>
    <string name="title_modo_falla">Modo de Falla:</string>
    <string name="title_metodo_deteccion">Método de Detección:</string>
    <string name="title_orden_trabajo">Orden de Trabajo:</string>
    <string name="title_fecha">Fecha:</string>
    <string name="title_comentario">Comentario:</string>
    <string name="title_inicio_parada">Inicio de Parada:</string>
    <string name="title_fin_parada">Fin de Parada:</string>
    <string name="title_clase_parada">Clase de Parada:</string>
    <string name="title_tipo_parada">Tipo de Parada:</string>
    <string name="title_sub_tipo_parada">Sub-Tipo de Parada:</string>
    <string name="title_causa_falla">Causa de Falla:</string>
    <string name="title_impacto_funcion">Impacto en la Función:</string>
    <string name="title_mecanismo_falla">Mecanismo de Falla:</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_codigo">Código</string>
    <string name="hint_search">Buscar</string>
    <string name="hint_equipo">Buscar Equipo</string>
    <string name="hint_time">dd/mm/yyyy hh:mm</string>
    <string name="hint_tipo_consulta">Tipo de Consulta</string>
    <string name="hint_date">dd/mm/yyyy</string>
    <string name="title_aviso_falla">AVISO DE FALLA</string>
    <string name="title_codigo">AV/00003–2021</string>
    <string name="title_ubicacion">AGUA RESIDUAL</string>
    <string name="title_quipo_codigo">EQ-000890</string>
    <string name="title_equipo_nombre">BOMBA MULTIETAPA ALTAMIRA SCALA #1</string>
    <string name="title_send">Enviar</string>
    <string name="title_logout">Cerrar Sesión</string>
    <string name="title_ums">UMS: TEMPERATURA</string>
    <string name="title_pm_t1">PM: T1</string>
    <string name="title_fecha_muestra">Fecha de muestra:</string>
    <string name="title_valor_muestra">Valor de muestra:</string>
    <string name="title_seleccionar_archivos">SELECCIONAR ARCHIVOS</string>
    <string name="title_logo_alpha">AMSYS - Alphamanufacturas</string>
    <string name="title_avisos">Avisos</string>
    <string name="title_inspeccion">Inspección</string>
    <string name="required">(*)</string>
    <string name="title_disciplina">Disciplina:</string>
    <string name="notificar_parada">Notificar Fecha Fin de la Parada</string>
    <string name="no">NO</string>
    <string name="si">SI</string>
    <string name="inspeccion_fragment_4_1">¿He finalizado la inspección?</string>
    <string name="inspeccion_fragment_4_2">Notificación de la inspección</string>
    <string name="inspeccion_fragment_4_3">Tiempo de trabajo:</string>

    <string name="no_si">No/Si</string>
</resources>